link to submit issue form instead of GH issues & fix v2 api docs jumpy scroll in some cases

--- a/_scss/docs/main.scss
+++ b/_scss/docs/main.scss
@@ -48,6 +48,7 @@ body {
 
     + main {
       margin-right: $platform-preview-width;
+      min-height: 777px;
     }
   }
 
